[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/topDownPlayer/TopDownPlayer.gd" type="Script" id=1]
[ext_resource path="res://scenes/topDownPlayer/3DirSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/storm/lightningOutline.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/topDownPlayer/droneCamera.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.92751, 8.19627 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.594, 16.3849 )

[node name="TopDownPlayer" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.74341, 11.7413 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 1.22377, 4.54543 )
shape = SubResource( 2 )

[node name="3DirSprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 4.414 )

[node name="lightningOutline" parent="3DirSprite" instance=ExtResource( 3 )]

[node name="droneCamera" parent="." instance=ExtResource( 4 )]
